--- a/sort/sort.css
+++ b/sort/sort.css
@@ -130,7 +130,10 @@ li {
   color: rgb(211, 211, 211)
   /* border: 2px solid #77cccd; */
 }
-.card > button {
+a{
+  text-decoration-line: none;
+}
+.card > .button {
   width: 90%;
   color: white;
   font-size: 1.5rem;
@@ -139,6 +142,8 @@ li {
   border-radius: 50px;
   margin-top: 1.6rem;
   height: 3rem;
+  padding-top: .5rem;
+  padding-left: 3.8rem;
 }
 .footer {
   color: white;
