--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
   /* margin-top: 2rem; */
   /* margin-bottom: 2rem; */
 }
+a{
+  text-decoration-line: none;
+}
+
 li {
   list-style: none;
   margin-top: 3rem;
@@ -65,6 +69,7 @@ li {
   color: #b4d334;
   border: 3px solid #b4d334;
   padding-top: 7px;
+  cursor: pointer;
 }
 .imag_desc {
   display: flex;
@@ -141,6 +146,7 @@ li {
   background-color: white;
   color: #b4d334;
   border: 3px solid #b4d334;
+  cursor: pointer;
 }
 .fuon {
   margin-top: 2.5rem;
@@ -157,6 +163,7 @@ li {
 .fuon:hover{
   border: 2px solid white;
   border-radius: 10px;
+  cursor: pointer;
 }
 .container {
   max-width: 100vw;
@@ -270,7 +277,7 @@ li {
   color: rgb(211, 211, 211)
   /* border: 2px solid #77cccd; */
 }
-.card > button {
+.card > .button {
   width: 90%;
   color: white;
   font-size: 1.5rem;
@@ -279,8 +286,10 @@ li {
   border-radius: 50px;
   margin-top: 1.6rem;
   height: 3rem;
+  padding-top: .5rem;
+  padding-left: 6rem;
 }
-.stor > button{
+.stor > .button{
   width: 10%;
   border: none;
   font-size: 2rem;
