--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ hr {
   }
 
   .list {
-    width: 19.5rem;
+    width: 20rem;
     margin-top: -2rem;
   }
   .navbar > .list > a > li {
@@ -459,17 +459,17 @@ hr {
   }
   .imag_desc {
     display: flex;
-    width: 20rem;
+    width: 25rem;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
   .imag_desc > img {
-    width: 19rem;
+    width: 25rem;
     height: 19rem;
   }
   .imag_desc > .header-paraa {
-    width: 19rem;
+    width: 23rem;
     margin-bottom: 15rem;
     margin-right: 1.9rem;
     margin-top: 5rem;
@@ -485,20 +485,20 @@ hr {
     font-size: 2rem;
   }
   .header-paraa > .spans {
-    width: 19rem;
+    width: 30rem;
     margin-top: -1rem;
-    padding-right: 2rem;
+    padding-right: 4rem;
     /* margin-right: 16rem; */
   }
   .header-paraa > .spans > .shop {
     width: 10rem;
-    font-size: 1rem;
-    margin-left: .8rem;
+    font-size: 1.7rem;
+    margin-left: 5rem;
     padding-bottom: 1.9rem;
   }
   .header-paraa > .spans > .fuon {
-    /* width: 1rem; */
-    font-size: 1rem;
+    width: 11rem;
+    font-size: 1.7rem;
   }
   .header-paraa > .spans > .fuon:hover {
     border: 1px solid white;
@@ -506,23 +506,18 @@ hr {
   .aboutUs {
     flex-direction: column;
   }
-  .aboutUs>img{
-    width: 19rem;
-  }
   .aboutUs > .contin {
-    width: 19rem;
+    width: 23rem;
   }
   .contin > h2 {
-    font-size: 2rem;
-    margin-left: 8rem;
+    margin-left: 9rem;
   }
   .contin > p {
-    font-size: .8rem;
+    font-size: 1rem;
     width: 18rem;
-    margin-left: 2rem;
+    margin-left: 4.5rem;
   }
   .stor {
-    width: 19rem;
     height: 100rem;
   }
   .card-contia {
@@ -531,27 +526,14 @@ hr {
   .card-contia > .card {
     margin-top: 1rem;
     margin-bottom: 2rem;
-    width: 18.5rem;
+    width: 22rem;
     margin-left: 0.5rem;
   }
   .card > img {
-    width: 16rem;
-  }
-  .card > .button {
-    width: 18rem;
-    margin-bottom: .9rem;
-    font-size: 1.5rem;
-    padding-left: 4.7rem;
-  }
-  .pris-span>.span{
-    font-size: 1.1rem;
-  }
-  .pris-span{
     width: 19rem;
-    margin-left: 4rem;
   }
-  .pris-span>.pris{
-    margin-left: .7rem;
+  .card > button {
+    margin-left: 3rem;
   }
   .stor > .button {
     width: 10rem;
