--- a/style.css
+++ b/style.css
@@ -440,10 +440,10 @@ margin-right: 1.5rem;
   width: 4rem;
   height: 4rem;
   }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   
   .navbar{
-    
+    width: 23rem;
     flex-direction: column;
     align-items: baseline;
   }
