--- a/style.css
+++ b/style.css
@@ -440,17 +440,17 @@ margin-right: 1.5rem;
   width: 4rem;
   height: 4rem;
   }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 450px) {
   
   .navbar{
-    width: 23rem;
+    /* width: 23rem; */
     flex-direction: column;
     align-items: baseline;
   }
 
   .list{
    
-    width: 23rem;
+    width: 22rem;
     margin-top: -2rem;
   }
   .navbar>.list>a>li{
@@ -465,19 +465,20 @@ margin-right: 1.5rem;
   } 
   .imag_desc{
     display: flex;
-    width: 25rem;
+    /* width: 23rem; */
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
   .imag_desc >img{
-    width: 25rem;
+    width: 22rem;
+    margin-top: 1rem;
     height: 19rem;
   }
   .imag_desc >.header-paraa{
-    width: 23rem;
+    width: 22rem;
     margin-bottom: 15rem;
-    margin-right: 1.9rem;
+    margin-right: 2rem;
     margin-top: 5rem;
 }
   
@@ -491,20 +492,21 @@ margin-right: 1.5rem;
     font-size: 2rem;
   }
   .header-paraa >.spans{
-    width: 30rem;
+    width: 22rem;
     margin-top: -1rem;
     padding-right:4rem;
     /* margin-right: 16rem; */
   }
   .header-paraa >.spans >.shop{
     width: 10rem;
-    font-size: 1.7rem;
+    font-size: .8rem;
     margin-left: 5rem;
     padding-bottom: 1.9rem;
+    height: .5rem;
   }
   .header-paraa >.spans >.fuon{
     width: 11rem;
-    font-size: 1.7rem;
+    font-size: .9rem;
   }
   .header-paraa >.spans >.fuon:hover{
     border: 1px solid white;
@@ -522,9 +524,12 @@ margin-right: 1.5rem;
     font-size: 1rem;
     width: 18rem;
     margin-left: 4.5rem;
+    overflow: auto;
+    height: 7rem;
   }
   .stor{
     height: 100rem;
+    margin-top: 2rem;
   }
   .card-contia{
     flex-direction: column;
@@ -533,7 +538,7 @@ margin-right: 1.5rem;
     margin-top: 1rem;
     margin-bottom: 2rem;
     width: 22rem;
-    margin-left: .5rem;
+    margin-left: 1.2rem;
   }
   .card>img{
     width: 19rem;
@@ -545,13 +550,10 @@ margin-right: 1.5rem;
     width: 10rem;
     margin-bottom: 1rem;
   }
-  .conect{
-    width: 0rem;
-    margin-left: 11rem;
-}
+
 .conect>.conectpla{
   width: 20rem;
-  margin-left: 1.5rem;
+  margin-left: .8rem;
 }
 .conectpla>textarea{
   width: 18rem;
@@ -569,7 +571,7 @@ margin-right: 1.5rem;
     width: 3rem;
   }
   .footer{
-    width: 23rem;
+    /* width: 23rem; */
   }
   .footer>img{
     width: 8rem;
@@ -578,8 +580,8 @@ margin-right: 1.5rem;
     margin-top: 1rem;
   }
   .contin-fot{
-    width: 10rem;
-    margin-left: 10rem;
+    width: 0rem;
+    margin-left: 14rem;
     flex-direction: column;
   }
   .word{
