--- a/style.css
+++ b/style.css
@@ -532,13 +532,14 @@ margin-right: 1.5rem;
     margin-top: 2rem;
   }
   .card-contia{
+    align-items: center;
     flex-direction: column;
   }
   .card-contia>.card{
     margin-top: 1rem;
     margin-bottom: 2rem;
     width: 22rem;
-    margin-left: 1.2rem;
+    
   }
   .card>img{
     width: 19rem;
@@ -570,9 +571,7 @@ margin-right: 1.5rem;
   .icon>img{
     width: 3rem;
   }
-  .footer{
-    /* width: 23rem; */
-  }
+  
   .footer>img{
     width: 8rem;
     height: 8rem;
