--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ margin-right: 1.5rem;
     height: 2rem;
   } 
   .imag_desc{
+    margin-top: 8rem;
     display: flex;
     /* width: 23rem; */
     flex-direction: column;
