--- a/sort/sort.css
+++ b/sort/sort.css
@@ -215,4 +215,69 @@ margin-right: 1.5rem;
   height: 4rem;
   }
 
+  @media screen and (max-width: 450px) {
+    .navbar{
+      /* width: 23rem; */
+      flex-direction: column;
+      align-items: baseline;
+    }
   
+    .list{
+     
+      width: 22rem;
+      margin-top: -2rem;
+    }
+    .list>li{
+      font-size: 1rem;
+    }
+    .shop-now{
+      font-size: .5rem;
+      width: 3rem;
+      border-radius: 15px;
+      padding-top: 11px;
+      height: 2rem;
+    } 
+    .card-contia{
+      align-items: center;
+      flex-direction: column;
+    }
+    .card-contia>.card{
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+      width: 22rem;
+      
+    }
+    .card>img{
+      width: 19rem;
+    }
+    .card>button{
+      margin-left: 3rem;
+    }
+    .footer>img{
+      width: 8rem;
+      height: 8rem;
+      margin-left: 1rem;
+      margin-top: 1rem;
+    }
+    .contin-fot{
+      width: 0rem;
+      margin-left: 14rem;
+      flex-direction: column;
+    }
+    .word{
+      font-size: .5rem;
+      margin-right: 12rem;
+    }
+    .media{
+      font-size: 1rem;
+      margin-right: 20rem;
+    }
+    .media>.icon-fot{
+      width: 5rem;
+    }
+    .icon-fot>img{
+      width: 4rem;
+      margin-left: -12rem;
+    }
+  
+  }
